force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Object_Id_Link__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Object_Id_Link__c</fullName>
    <formula>IF( Apttus_Approval__Object_Type__c = &#39;Apttus__Agreement_Term_Exception__c&#39;, HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View Agreement Term Exception&quot;), HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View &quot; &amp; Apttus_Approval__Object_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Link</label>
    <type>Text</type>
</CustomField>