force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__StepSequenceString__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepSequenceString__c</fullName>
    <description>Sequence with trailing zeros suppressed</description>
    <formula>IF(FIND(&#39;.&#39;, TEXT(Apttus_Approval__StepSequence__c)) = 2, LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&#39;.&#39;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 5, &#39;0&#39;), 3))), LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&#39;.&#39;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 6, &#39;0&#39;), 3))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sequence with trailing zeros suppressed</inlineHelpText>
    <label>Sequence</label>
    <type>Text</type>
</CustomField>